# slide2vec

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Dockerfile.ci  Dockerfile.coding-agents  README.md  logits.py  pyproject.toml  release.py  requirements-foundation.in  requirements-models.in  requirements.in  requirements.txt  setup.cfg  setup.py  slides.csv
.github/workflows/: docker.yaml  docs.yaml  lint.yaml  nightly-heavy.yaml  pr-test.yaml  release.yaml
.tasks/: fix-docker-python-install.md
docker/: Dockerfile  Dockerfile.prism  Dockerfile.prov-gigapath  Dockerfile.prov-gigapath.conda  Dockerfile.titan  environment.yaml  gigapath-requirements.in  prism-requirements.in  requirements.in  titan-requirements.in
docs/: 2026-02-10-bugfixes.md  2026-02-11-embed-v2.md  2026-03-13-api-refactor-plan.md  _generate_reference.py  api.rst  benchmarking.md  benchmarking.rst  cli.md  cli.rst  conf.py  documentation.md  documentation.rst  getting-started.rst  gpu-throughput-optimization-protocol.md  gpu-throughput-optimization-protocol.rst  hierarchical.rst  index.rst  manifest.rst  models.md  models.rst  output-layout.rst  preprocessing.rst  python-api.md  python-api.rst  reference.rst
docs/_static/: sidebar.css
docs/_templates/: base.html  layout.html  page.html
docs/_templates/sidebar/: github.html
docs/optimize-throughput/: h0-mini-single-gpu.md  h0-mini-single-gpu.rst
scripts/: benchmark_embed_v1_v2.py  benchmark_embedding_throughput.py  benchmark_end_to_end_paths.py  benchmark_tile_read_strategies.py  generate_gt.py
slide2vec/: __init__.py  __main__.py  aggregate.py  api.py  artifacts.py  buffer.py  cli.py  embed.py  inference.py  main.py  model_settings.py  progress.py  registry.py  resources.py  runtime_types.py  tiling.py
slide2vec/configs/: __init__.py  conch.yaml  default.yaml  default_model.yaml  default_tiling.yaml  h-optimus-0.yaml  h0-mini.yaml  h100-v2.yaml  hibou.yaml  kaiko-midnight.yaml  kaiko.yaml  musk.yaml  panda-vit-s.yaml  pathojepa.yaml  phikonv2.yaml  prism.yaml  prov-gigapath-slide.yaml  resources.py  titan.yaml  uni.yaml  uni2.yaml  virchow.yaml  virchow2.yaml
slide2vec/configs/models/: conch.yaml  conchv15.yaml  default.yaml  h-optimus-0.yaml  h-optimus-1.yaml  h0-mini.yaml  hibou.yaml  kaiko-midnight.yaml  kaiko.yaml  musk.yaml  panda-vit-s.yaml  pathojepa.yaml  phikonv2.yaml  prism.yaml  prov-gigapath-slide.yaml  prov-gigapath-tile.yaml  titan.yaml  uni.yaml  uni2.yaml  virchow.yaml  virchow2.yaml
slide2vec/configs/preprocessing/: default.yaml
slide2vec/data/: __init__.py  augmentations.py  cucim_tile_reader.py  dataset.py  tile_catalog.py  tile_reader.py  tile_store.py  wsd_tile_reader.py
slide2vec/distributed/: __init__.py  direct_embed_worker.py  pipeline_worker.py
slide2vec/encoders/: __init__.py  base.py  compat.py  registry.py  validation.py
slide2vec/encoders/models/: __init__.py  conch.py  genbio.py  gigapath.py  gpfm.py  hibou.py  hoptimus.py  lunit.py  midnight.py  moozy.py  mstar.py  musk.py  phikon.py  prism.py  prost40m.py  titan.py  uni.py  virchow.py
slide2vec/encoders/models/moozy/: __init__.py  blocks.py  case.py  loading.py  slide.py  types.py
slide2vec/models/: __init__.py  models.py  utils.py  vision_transformer.py  vision_transformer_pathojepa.py
slide2vec/models/layers/: attention.py  block.py  swiglu_ffn.py
slide2vec/runtime/: __init__.py  artifacts_collect.py  batching.py  cpu_budget.py  dense_regions.py  dense_sliding.py  distributed.py  distributed_stage.py  embedding.py  embedding_persist.py  embedding_pipeline.py  hierarchical.py  manifest.py  model_settings.py  patient_pipeline.py  persist_callbacks.py  persistence.py  process_list.py  progress_bridge.py  registry.py  serialization.py  slide_encode.py  tiling.py  tiling_pipeline.py  types.py  worker_io.py
slide2vec/utils/: __init__.py  config.py  coordinates.py  log_utils.py  parquet.py  paths.py  tiling_io.py  utils.py
slide2vec/wsi/: __init__.py  utils.py  wsi.py
tasks/: 2026-03-13-api-refactor-plan.md  2026-03-14-embed-slide-api-plan.md  2026-04-08-failing-tests-investigation-plan.md  lessons.md
test/: development-README.md  test_dataset_worker_cache.py  test_regression_bugfixes.py
test/gt/: test-wsi.pt
test/input/: config.yaml
tests/: conftest.py  test_architecture_runtime_split.py  test_attention_extraction.py  test_batch_collator_timing.py  test_benchmark_embedding_throughput.py  test_benchmark_end_to_end_paths.py  test_benchmark_tile_read_strategies.py  test_dense_extraction.py  test_dense_locality_gated.py  test_dense_regions.py  test_dense_sliding.py  test_dependency_split.py  test_docs.py  test_encoder_registry.py  test_gpfm_genbio_heavy.py  test_hs2p_package_cutover.py  test_import_surface.py  test_output_consistency.py  test_packaging_metadata.py  test_patch_size_metadata.py  test_path_resolution.py  test_progress.py  test_regression_bugfixes.py  test_regression_core.py  test_regression_inference.py  test_regression_models.py  test_release.py  test_runtime_batching.py  test_tile_catalog.py  test_tile_store.py  test_tiling_pipeline.py
tests/fixtures/: test_embed_pipeline_mode.py  test_rank_sharding_lpt.py
tests/fixtures/gt/: test-wsi.coordinates.meta.json  test-wsi.coordinates.npz  test-wsi.pt  test-wsi.tiles.meta.json
