[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slide2vec"
version = "4.4.0"
description = "Embedding of whole slide images with Foundation Models"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Clément Grisi", email = "clement.grisi@radboudumc.nl" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "hs2p[asap,cucim,openslide,sam2,vips]>=4.0.5",
    "omegaconf",
    "matplotlib",
    "numpy<2",
    "pandas",
    "pillow",
    "rich",
    "torch",
    "torchvision",
    "transformers",
    "wandb",
    "einops",
    "timm",
    "huggingface_hub",
]

[project.urls]
Homepage = "https://github.com/clemsgrs/slide2vec"
"Bug Tracker" = "https://github.com/clemsgrs/slide2vec/issues"

[project.scripts]
slide2vec = "slide2vec.cli:entrypoint"

[project.optional-dependencies]
hoptimus = [
    "torch>=2.0",
    "torchvision>=0.15.0",
    "xformers>=0.0.18",
]
virchow = [
    "timm>=0.9.11",
    "torch>=2.0",
]
uni = [
    "torch>=2.0",
    "timm>=0.9.8",
    "xformers>=0.0.18",
]
prism = [
    "transformers~=4.53.0",
    "torch>=2.3,<2.8",
    "einops==0.8.0",
    "environs==11.0.0",
    "sacremoses==0.1.1",
    "xformers==0.0.31",
]
hibou = [
    "scipy~=1.8.1",
    "scikit-image~=0.19.3",
]
moozy = [
    "huggingface_hub>=0.30.0,<1.0",
]
titan = [
    "torch==2.0.1",
    "timm==1.0.3",
    "einops==0.6.1",
    "einops-exts==0.0.4",
    "transformers==4.46.0",
]
fm = [
    "omegaconf>=2.3.0",
    "matplotlib",
    "numpy<2",
    "pandas",
    "pillow",
    "rich",
    "hs2p[asap,cucim,openslide,sam2,vips]>=4.0.5",
    "wandb",
    "torch>=2.3,<2.8",
    "torchvision>=0.18.0",
    "einops>=0.8.0",
    "timm>=1.0.3",
    "huggingface_hub>=0.30.0,<1.0",
    "environs",
    "einops-exts>=0.0.4",
    "transformers>=4.53",
    "sacremoses",
    "xformers>=0.0.31",
    "scipy>=1.8.1",
    "scikit-image>=0.19.3",
    "torchmetrics>=0.10.3",
    "fvcore",
    "iopath",
    "webdataset",
    "scikit-survival",
    "scikit-learn",
    "fairscale",
    "packaging==23.2",
    "ninja==1.11.1.1",
    "psutil<6",
]
docs = [
    "sphinx>=8.1",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
]
testing = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "mypy>=0.910",
    "flake8>=3.9",
    "flake8-pyproject>=1.2.3",
    "tox>=3.24",
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["slide2vec*"]

[tool.setuptools.package-data]
slide2vec = ["py.typed"]
"slide2vec.configs" = ["*.yaml", "models/*.yaml", "preprocessing/*.yaml"]

[tool.pytest.ini_options]
addopts = "--cov=slide2vec"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "."
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.flake8]
max-line-length = 160

[tool.bumpver]
current_version = "4.4.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit = false       # We do version bumping in CI, not as a commit
tag = false          # Git tag already exists — we don't auto-tag
push = false         # Don't push anything in CI
files = [
    "pyproject.toml",
    "slide2vec/__init__.py"
]

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^current_version = "{version}"$',
    '^version = "{version}"$',
]
"slide2vec/__init__.py" = [
    '^__version__ = "{version}"$',
]
