[metadata]
name = slide2vec
version = 3.0.1
description = Embedding of whole slide images with Foundation Models
author = Clément Grisi
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages =
    slide2vec
install_requires =
    hs2p>=2.4.0,<3
    omegaconf
    h5py
    matplotlib
    numpy<2
    pandas
    pillow
    rich
    tqdm
    torch
    torchvision
    transformers
    wandb
    wholeslidedata<0.0.16
    einops
    timm

python_requires = >=3.10
zip_safe = no
include_package_data = True

[options.extras_require]
cucim =
    hs2p[cucim]>=2.4.0,<3
    PyTurboJPEG
models =
    huggingface-hub
    sacremoses
    einops-exts
    xformers
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slide2vec = py.typed
slide2vec.configs = *.yaml, models/*.yaml, preprocessing/*.yaml

[options.entry_points]
console_scripts =
    slide2vec = slide2vec.cli:main

[flake8]
max-line-length = 160
